--- a/src/pages/escort/navMedia/components/photo.css
+++ b/src/pages/escort/navMedia/components/photo.css
@@ -1,4 +1,14 @@
-.photo{
-    padding-left: 5px !important;
-    padding-right: 5px !important;
+.gallery{
+    display: grid;
+    /*grid-template-columns: repeat(auto-fill,minmax(100px,1fr));*/
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 5px;
+    /*grid-auto-rows: 150px;
+    grid-auto-flow: row dense;*/
+}
+
+.gallery img{
+    height: 200px;
+    max-width: 100%;
+    object-fit: cover;
 }
